# Qwen3-TTS-Rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
.trae/specs/enhance-tts-inference/: checklist.md  spec.md  tasks.md
src/: assets_manager.rs  download.rs
src/models/: onnx.rs
src/models/llama/: mod.rs
src/tts/: engine.rs  prompt.rs
src/utils/: audio.rs
webui/: audio-processor.js  index.html
