[package]
name = "qwen3-tts"
version = "0.1.5"
edition = "2021"
description = "Rust implementation of Qwen3-TTS with ONNX Runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgisky1980/Qwen3-TTS-Rust"
readme = "README.md"

[lib]
path = "src/lib.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
ndarray = "0.17"
ndarray-npy = "0.8"
rand = "0.8"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic", "cuda", "directml"] }
tokenizers = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hound = "3.5"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
libloading = "0.8"
clap = { version = "4.5", features = ["derive"] }
mel_spec = "0.3"
rustfft = "6.4.1"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
indicatif = "0.17"
futures-util = "0.3"
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
num_cpus = "1.16"
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-server = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-tungstenite = "0.26"
base64 = "0.22"

[features]
cuda = []
vulkan = []
profile = []  # 启用性能分析计时


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "fileapi", "handleapi", "winbase"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
